--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -84,6 +84,7 @@
     position: relative;
     background-image: url(../images/reviews/image.png);
     background-size: cover;
+    background-position: center;
 }
 .design::after {
     content: "";
@@ -100,7 +101,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    z-index: 10;
+    z-index: 3;
 }
 .design__tittle {
     font-family: 'Raleway';
